src/objects/IRIS_Country__c.object
<CustomObject>
    <description>Stores all the country.</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Used to store country code</description>
        <label>Country Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Description__c</fullName>
        <description>Used to store Country description</description>
        <label>Country Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Short_Description__c</fullName>
        <description>Used to store short discription</description>
        <label>Country Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Process_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to check if applicable for HR Process Type.</description>
        <label>HR Process Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STD_Country_Code__c</fullName>
        <description>Used to store STD code for a country</description>
        <label>STD Country Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HR_Process_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>